# PLOS_2025_BCS

./: CMakeLists.txt  README.md  local_solver.h  myMeshGenerator.h  solver.h  wound.h
include/: element_functions.h  file_io.h
meshing/: myMeshGenerator.cpp
src/: element_functions.cpp  file_io.cpp  local_solver.cpp  results_circle_wound.cpp  solver.cpp  wound.cpp
